--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,3 @@
 {
-  "headers": [
-    {
-      "source": "/",
-      "headers": [
-        { "key": "Content-Type", "value": "text/html; charset=utf-8" }
-      ]
-    },
-    {
-      "source": "/(.*)\\.html",
-      "headers": [
-        { "key": "Content-Type", "value": "text/html; charset=utf-8" }
-      ]
-    }
-  ],
-  "rewrites": [
-    { "source": "/", "destination": "/index.html" }
-  ]
+  "rewrites": [{ "source": "/", "destination": "/index.html" }]
 }
